--- a/visionpi/package.json
+++ b/visionpi/package.json
@@ -1,9 +1,10 @@
 {
   "name": "visionpi",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "main": "app.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node app.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
